@startuml Architecture Analysis
    !theme blueprint
    title Analysis Package and Entity

    actor User
    package ConsoleApp{
        package Models{
            entity TicTacToe
            entity Board
            entity Turn
            entity PlayerConfiguration
            entity Player
            entity UserPlayer
            entity MachinePlayer

            TicTacToe *--> Board
            TicTacToe *--> Turn
            TicTacToe *--> Player
            TicTacToe ..> PlayerConfiguration

            PlayerConfiguration *--> Player
            Player <|-- UserPlayer
            Player <|-- MachinePlayer
            Player --> Board

            Turn --> Player

        }
        Models ..> Types
        Models ..> Enums

        package Types{
            entity Coordinate
            entity ClosedInterval

            Coordinate ..> ClosedInterval
        }
        Types ..> Enums

        package Enums{
            entity Message
            entity Error
            entity Token
        }
    }
@enduml

@startuml Analysis Configure Players
    !theme blueprint
    left to right direction

    actor User
    package Models{
        entity TicTacToe
        entity Message
        entity PlayerConfiguration
        entity Token
        entity Player
        entity Error
    }

    User --> TicTacToe
        TicTacToe --> PlayerConfiguration
            PlayerConfiguration --> Message
            PlayerConfiguration --> Error
            PlayerConfiguration --> Token
            PlayerConfiguration --> Player
                Player --> Token
@enduml

@startuml Analysis Start
    !theme blueprint
    left to right direction

    title Analysis Start

    actor User
    package Models{
        entity TicTacToe
        entity Board
        entity Token
        entity Coordinate
        entity Message        
    }

    User --> TicTacToe
        TicTacToe --> Board
            Board --> Token
            Board --> Coordinate
            Board --> Message
        TicTacToe --> Message
@enduml

@startuml Analysis Play
    !theme blueprint
    left to right direction
    title Analysis Play

    actor User
    package Models{
        entity TicTacToe
        entity Board
        entity Token
        entity Coordinate
        entity Turn
        entity Message
        entity Player        
        entity ClosedInterval
        entity Error
    }

    User --> TicTacToe
        TicTacToe --> Turn
            Turn --> Player
                Player --> Token
        TicTacToe --> Message
        TicTacToe --> Player
            Player --> Message  
            Player --> Coordinate
                Coordinate --> Message
                Coordinate --> ClosedInterval
                Coordinate --> Error
            Player --> Board
            Player --> Error
        TicTacToe --> Board
            Board --> Token
            Board --> Coordinate
            Board --> Message
@enduml

@startuml Analysis Resume
    !theme blueprint
    left to right direction
    title Analysis Resume

    actor User
    package Models{
        entity TicTacToe
        entity Token
        entity Turn
        entity Message
        entity Player
        entity YesNotDialog
    }

    User --> TicTacToe
        TicTacToe --> Turn
            Turn --> Player
        TicTacToe --> Player
            Player --> Token
            Player --> Message
            Player --> YesNotDialog
                YesNotDialog --> Message
@enduml

@startuml TicTacToe Class Analysis
    !theme blueprint
    title TicTacToe Class' Analysis

    package TicTacToe{
        namespace Models{
            class TicTacToe{
                ~TicTacToe()
                ~Run()
                -ConfigurePlayer() 
                -Start()
                -Play()
                -IsResume() : boolean
            }
            TicTacToe *--> Board
            TicTacToe *--> Turn
            TicTacToe *--> "2" Player
            TicTacToe ..> PlayerConfiguration
        }
    }
@enduml

@startuml Turn Class Analysis
    !theme blueprint
    title Turn Class' Analysis

    package TicTacToe{        
        namespace Models{
            class Turn{
                ~{static}MAX_PLAYER
                ~current : int
                ~Turn(Players)
                ~Next()
                ~GetCurrent() : Player
            }
            Turn *--> "2" Player
        }
    }
@enduml

@startuml Player Class Analysis
    !theme blueprint
    title Player Class' Analysis

    package TicTacToe{        
    namespace Models{
            class Player{
                ~tokes : int
                ~Player(Board, Token)
                ~GetToken() : Token
                ~PutToken()
                -CheckErrorToPut(Coordinate) : Error
                ~MoveToken()   
                -CheckOriginErrorToMove(Coordinate) : Error
                -CheckTargetErrorToMove(Origin, Target) : Error
                ~IsResume() : boolean
                ~WriteWinner()
            }
            Player <|-- UserPlayer
            Player <|-- MachinePlayer
            Player --> Board
            Player --> Token
        }

        namespace Enums{
            enum Message{
            }
            Message <.up. Models.Player

            enum Token{
            }
            Token <.up. Models.Player

            enum Error{
            }
            Error <.up. Models.Player
        }

        namespace Types{
            class Coordinate{
            }
            Coordinate <.up. Models.Player
        }
    }
@enduml

@startuml Board Class Analysis
    !theme blueprint
    title Board Class' Analysis

    package TicTacToe{
        namespace Models{
            class Board{
                ~Board()
                ~Reset()
                ~PutToken(Coordinate, Token)
                ~MoveToken(origin, target)
                ~IsTicTacToe(Token) : boolean
                ~IsEmpty(Coordinate) : boolean
                ~Write()
            }
        }

        namespace Types{
            class Coordinate{
            }
            Coordinate <.up. Models.Board
        }

        namespace Enums{
            enum Token{
            }
            Token "3x3" <-up-* Models.Board
            enum Message{
            }
            Message <.up. Models.Board
        }
    }
@enduml

@startuml PlayerConfiguration Class Analysis
    !theme blueprint
    title PlayerConfiguration Class' 
    package TicTacToe{
        namespace Models{
            class PlayerConfiguration{
                ~PlayerConfiguration()
                ~ConfigurePlayer() : Players
            }
            PlayerConfiguration ..> "2" Player
            PlayerConfiguration ..> UserPlayer
            PlayerConfiguration ..> MachinePlayer
        }

        namespace Enums{
            enum Token{
            }
            Token <.up. Models.PlayerConfiguration

            enum Message{
            }
            Message <.up. Models.PlayerConfiguration

            enum Error{
            }
            Error <.up. Models.PlayerConfiguration
        }
    }   
@enduml

@startuml Types Analysis
    !theme blueprint
    title Types' Analisys
    package TicTacToe{
        namespace Types{
            class Coordinate{
            }
            Coordinate ..> ClosedInterval

            class ClosedInterval{
            }
        }

        namespace Models{
            Board ..> Types.Coordinate
            Player ..> Types.Coordinate
        }
    }   

@enduml

@startuml Enums Analysis
    !theme blueprint
    title Enums Analysis

    package TicTacToe{
        namespace Enums{
            enum Token{
                ~X,
                ~O,
                ~Null
            }            

            enum Message{
            }

            enum Error{
            }
        }

        namespace Models{
            class Board{
            }
            Board ..> Enums.Token
            Board ..> Enums.Message

            class Player{
            }
            Player ..> Enums.Token
            Player ..> Enums.Message
            Player ..> Enums.Error

            class PlayerConfiguration{
            }
            PlayerConfiguration ..> Enums.Token
            PlayerConfiguration ..> Enums.Message
            PlayerConfiguration ..> Enums.Error
        }

        namespace Types{
            class Coordinate{
            }
            Coordinate ..> Enums.Message
            Coordinate ..> Enums.Error
        }
    }
@enduml

@startuml Package Analysis
    !theme blueprint
    title Package Analysis

    package TicTacToe{
        namespace Models #Green{}
        namespace Types #OrangeRed{}
        namespace Enums #SaddleBrown{}

        Models ..> Enums
        Models ..> Types
        Types ..> Enums
    }
@enduml